flux/infrastructure/storage/longhorn/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  labels:
      vlan: ingress
spec:
  parentRefs:
  - name: vlan12-gateway
    namespace: default
  hostnames:
  - "longhorn.ingress.logikdev.fr"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
      weight: 100
